# seo-mcp-server

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/: copilot-instructions.md
firebase/: firebase.json
firebase/functions/: main.py  package.json
firebase/public/: index.html
src/seo_mcp_server/: __init__.py  client.py
